# xn_esp32_ml307r_usb

./: CMakeLists.txt  README.md
components/usb_rndis_4g/: idf_component.yml
components/usb_rndis_4g/src/: usb_rndis_4g.c
components/xn_ml307r_usb_rndis/: CMakeLists.txt  README.md
components/xn_ml307r_usb_rndis/include/: usb_rndis_4g.h
components/xn_ml307r_usb_rndis/src/: usb_rndis_4g.c
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
